--- a/packages/fields-datetime-utc/package.json
+++ b/packages/fields-datetime-utc/package.json
@@ -13,7 +13,9 @@
     "@babel/runtime": "^7.8.4",
     "@keystonejs/adapter-knex": "^11.0.0",
     "@keystonejs/adapter-mongoose": "^9.0.0",
+    "@keystonejs/adapter-prisma": "^0.0.0",
     "@keystonejs/fields": "^14.0.0",
+    "date-fns": "^2.14.0",
     "luxon": "^1.11.4"
   },
   "main": "dist/fields-datetime-utc.cjs.js",
